# monitor-audio-sync-rs

./: .gitignore  Cargo.toml  README.md  config.sample.rs
src/: audio_devices.rs  hresult.rs  lpwstr.rs  main.rs  monitor.rs  policy_config.rs  timer_event_loop.rs  window.rs  windows_util.rs
