[package]
name = "monitor-audio-sync-rs"
version = "0.1.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "unknwnbase",
    "mmreg",
    "combaseapi",
    "winerror",
    "winbase",
    "objbase",
    "mmdeviceapi",
] }
